scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.movieList{
+    overflow-x: auto;
+}
+
+.movieList::-webkit-scrollbar{
+    display: none;
+}
